logout button alignment fixed

--- a/frontend/searchStyle.css
+++ b/frontend/searchStyle.css
@@ -101,6 +101,7 @@
 
     background: #068CEC;
     box-shadow: 0px 8px 4px rgba(21, 51, 16, 0.25);
+    float: right;
 }
 
 .buttonWord {
